Apply code review: use set in the constructor of Lottery and WinningLottery